# Serpico

./: Cargo.toml  README.md
src/: cli_parser.rs  data_fetcher.rs  data_writer.rs  error.rs  main.rs  utils.rs
