[package]
name = "starkryo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
kdam = "0.5.1"
starknet = "0.9.0"
tokio = { version = "1.36.0", features = ["full"] }
